--- a/style.css
+++ b/style.css
@@ -53,10 +53,10 @@ body {
     height: 100vh;
     width: 80vw;
     margin: 0 auto;
+    background: rgb(135, 206, 250, 0.2);
 }
 
 .right-section {
-    border: 1px red solid;
     flex: 2;
 }
 
@@ -65,7 +65,7 @@ body {
     flex-direction: column;
     text-align: center;
     justify-content: space-between;
-    border: 1px blue solid;
+    border-radius: 10px;
 }
 
 .picture-footer {
