--- a/style.css
+++ b/style.css
@@ -42,6 +42,11 @@ body {
     background-size: cover;
 }
 
+:root {
+    --text-color-black: #353535;
+    --text-color-white: #f4f4f4;
+    --transparent-bg-color: rgba(138, 196, 233, 0.5);
+}
 
 .picture-section {
     flex: 1;
@@ -53,11 +58,13 @@ body {
     height: 100vh;
     width: 80vw;
     margin: 0 auto;
-    background: rgb(135, 206, 250, 0.2);
+    background: var(--transparent-bg-color);
 }
 
 .right-section {
     flex: 2;
+    display: flex;
+    flex-direction: column;
 }
 
 .picture-section {
@@ -69,8 +76,38 @@ body {
 }
 
 .picture-footer {
-    color: #101010;
+    color: var(--text-color-black);
     font-weight: bold;
     font-style: italic;
     margin-bottom: 1rem;
+}
+
+.disclaimer-container {
+    flex: 1;
+    display: flex;
+    flex-direction: column;
+    justify-content: flex-end;
+    margin-bottom: 3rem;
+}
+
+.form-container {
+    display: flex;
+    flex-direction: column;
+    flex: 2;
+}
+
+.form-submit {
+    margin-top: 2rem;
+}
+
+.disclaimer,
+.form-container > p {
+    color: var(--text-color-black);
+    font-size: 1.2rem;
+    font-weight: bolder;
+}
+
+.reminder-message {
+    font-weight: bold;
+    color: var(--text-color-black);
 }
