--- a/style.css
+++ b/style.css
@@ -37,7 +37,7 @@ p, h1, h2, h3, h4, h5, h6 {
 /* basic frameworks */
 
 body {
-    background-image: url(/background.jpeg);
+    background-image: url(images/background.jpeg);
     background-repeat: no-repeat;
     background-position: center center;
     background-size: cover;
